topbar collapses correctly

--- a/app/assets/stylesheets/bookshelf-controls.css
+++ b/app/assets/stylesheets/bookshelf-controls.css
@@ -35,6 +35,9 @@
   .shelf-link-home {
     display: none;
   }
+  #shelf-redirectHome {
+    display: none;
+  }
 }
 
 .shelf-menu-item {
