--- a/app/assets/stylesheets/topbar.scss
+++ b/app/assets/stylesheets/topbar.scss
@@ -19,7 +19,12 @@
 
 #topbar-mymanga {
   position: absolute;
-  left: 15em;
+  left: 11em;
+}
+
+#topbar-logout {
+  position: absolute;
+  left: 48em;
 }
 
 .topbar-header {
